--- a/Travell/package.json
+++ b/Travell/package.json
@@ -14,6 +14,9 @@
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router": "^6.22.2",
+    "react-router-dom": "^6.22.2",
     "react-scroll": "^1.9.0",
     "tailwindcss": "^3.4.1"
   },
